--- a/vcd3/v3.html
+++ b/vcd3/v3.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
+<html lang="ja">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>cakes</title>
+    <style>
+        .wrap{
+            
+            width:45%;
+            
+        }
+        .half{
+            display:flex;
+        }
+        .i{
+            margin:5% 5% 5% 5%;
+        }
+    </style>
 </head>
 <body>
     <div class="wrap">
-        <a href="cake01.jpg"></a>
-        <a href="cake02.jpg"></a>
-        <a href="cake03.jpg"></a>
-        <a href="cake04.jpg"></a>
+        <div class="half">
+            <div class="i">
+                <img src="cake01.jpg">
+            </div>
+            <div class="i">
+                <img src="cake02.jpg">
+            </div>
+        </div>
+        <div class="half">
+            <div class="i">
+                <img src="cake03.jpg">
+            </div>
+            <div class="i">
+                <img src="cake04.jpg">
+            </div>
+        </div>
     </div>
 
 </body>
