--- a/素材/yaki.html
+++ b/素材/yaki.html
@@ -9,13 +9,38 @@
     <div class="shop">
         <div class="header">
             <div class="title">
-                <p>焼肉 牛工大</p>
+                <img src="ロゴ.png">
             </div>
-            <div class="title_video">
-                <video src="onikuimages-1129131_h.mp4" autoplay="" muted="" loop="" playsinline="">
+            <div class="motto">
+                <p>モットー</p>
+                <p>中途半端なものは提供しません。一流の肉を格安で！<p></p>
+            </div>
+        </div>
+        <div class="slct">
+            <div class="ran" id="home">
+                <h1><a href="yaki.html">当店について</a></h1>
+            </div>
+            <div class="ran" id="menu">
+                <h1><a href="menu.html">メニュー</a></h1>
+            </div>
+        </div>
+        <div class="home">
+            <h1>当店について</h1>
+            当店は、しちりんを使った本格炭火焼肉店です。<br>
+            炭火焼肉でも煙などの排気には最新鋭の換気システムを導入しています。<br>
+            オーダーは、タッチパネルから行ってください。<br>
+            会計は、キャッシュレス歓迎、キャッシュレスの場合は１０％オフ<br>
+        </div> 
+        <div class="info">
+            <h3>場所 〒000-0000 焼肉市美食町1-2-3</h3>
+            <h3>電話番号 000-456-7890</h3>
+            <h3>メール info@yakiniki.umai.up</h3>
+            <div class="video">
+                <video playsinline autoplay muted loop>
+                    <source src="onikuimages-1129131_h.mp4" type="video/mp4">
                 </video>
-            </div>    
-        </div>    
+            </div>
+        </div>  
     </div>
 </body>
 </html>
