--- a/素材/menu.html
+++ b/素材/menu.html
@@ -12,7 +12,7 @@
             </div>
             <div class="motto">
                 <p>モットー</p>
-                <p>中途半端なものは提供しません。一流の肉を格安で！<p></p>
+                <p>中途半端なものは提供しません。一流の肉を格安で！</p>
             </div>
         </div>
         <div class="slct">
